crates/pack/tests/compile_fail/fact_no_new.stderr
error[E0599]: no associated function or constant named `construct_unchecked` found for struct `ContextFact` in the current scope
 --> tests/compile_fail/fact_no_new.rs:8:22
  |
8 |         ContextFact::construct_unchecked(ContextKey::Seeds, "test-id", "test-content");
  |                      ^^^^^^^^^^^^^^^^^^^ associated function or constant not found in `ContextFact`
  |
note: if you're trying to build a new `ContextFact` consider using one of the following associated functions:
      ContextFact::new_projection
      ContextFact::from_wire
 --> $CARGO/converge-pack-$VERSION/src/fact.rs
  |
  | /     pub fn new_projection<T>(
  | |         key: ContextKey,
  | |         id: impl Into<FactId>,
  | |         payload: T,
... |
  | |     where
  | |         T: FactPayload + PartialEq,
  | |___________________________________^
...
  | /     pub fn from_wire(
  | |         wire: WireContextFact,
  | |         registry: &PayloadRegistry,
  | |     ) -> Result<Self, PayloadError> {
  | |___________________________________^
